# Chest_X-Ray_Classification

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  environment.yml  mlflow.db  pyproject.toml  requirements.txt
chest_x_ray_classification/: __init__.py  config.py  dataset.py
chest_x_ray_classification/modeling/: analyze_failures.py  evaluate_final.py  explain.py  train.py  tune_threshold.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: eda.ipynb
reports/: eda_report.md  final_report.md
reports/figures/: classification_report.txt
tests/: test_config.py
