[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "chest_x_ray_classification"
version = "0.0.1"
description = "A comprehensive data analysis of chest X-ray images"
authors = [
  { name = "Songyu Yang" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["chest_x_ray_classification"]
include = ["pyproject.toml", "chest_x_ray_classification/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["chest_x_ray_classification"]
force-sort-within-sections = true

